--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.81.0'
+          hugo-version: '0.104.0'
           extended: true
  
       - name: Build
@@ -26,7 +26,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          external_repository: zpc2222/zpc2222.github.io # 修改为自己的地址
+          external_repository: zpc2222/hugo-blog.github.io # 修改为自己的地址
           publish_dir: ./public
         #   keep_files: true
           publish_branch: master
