--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ baseURL: https://zpc2222.github.io # 绑定的域名
 languageCode: zh-cn # en-us
 title: 我的个人小站
 theme: PaperMod  # 主题名字，和themes文件夹下的一致
-
+publishDir: docs
 enableInlineShortcodes: true
 enableEmoji: true # 允许使用 Emoji 表情，建议 true
 enableRobotsTXT: true # 允许爬虫抓取到搜索引擎，建议 true
