--- a/content/.obsidian/workspace
+++ b/content/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "posts/tech/Java/登录框架.md",
+            "file": "links.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "posts/tech/Java/登录框架.md",
+                "file": "links.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "posts/tech/Java/登录框架.md",
+                "file": "links.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "posts/tech/Java/登录框架.md"
+                "file": "links.md"
               }
             }
           }
@@ -130,15 +130,15 @@
   },
   "active": "6c8ceb7092a38532",
   "lastOpenFiles": [
-    "posts/read/潜意识：发现未知的自己.md",
-    "posts/read/read.md",
-    "posts/read/大学·中庸·尚书·周易.md",
-    "posts/read/2015年度300问：娱乐.md",
-    "posts/read/潜意识：发现未知的自己-奥里森·马登.md",
-    "posts/read/2015年度300问：娱乐-知乎.md",
-    "posts/read/大学·中庸·尚书·周易-曾参，子思，伏生，周文王.md",
-    "links.md",
+    "about.md",
     "search.md",
-    "archives.md"
+    "archives.md",
+    "links.md",
+    "posts/tech/Netty实战.md",
+    "posts/tech/Java/微信小程序相关.md",
+    "posts/tech/Java/微信支付.md",
+    "posts/tech/Java/数据人民币支付.md",
+    "posts/tech/Java/登录框架.md",
+    "posts/life/life.md"
   ]
 }
