--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -26,7 +26,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          external_repository: zpc2222/hugo-blog.github.io # 修改为自己的地址
+          external_repository: zpc2222/zpc2222.github.io # 修改为自己的地址
           publish_dir: ./public
           keep_files: true
           publish_branch: master
