--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ buildExpired: false
 googleAnalytics:  # 谷歌统计
 # Copyright: 藏锋
 
-paginate: 10   # 首页每页显示的文章数
+paginate: 8   # 首页每页显示的文章数
 
 minify:
     disableXML: true
@@ -36,7 +36,7 @@ languages:
         enabled: true
         title: (〃'▽'〃)
         subtitle: 
-        subtitle: "🧨人生三大真理：<br/>暴力真的可以解决一切，<br/>帅真的可以当饭吃，<br/>有钱真的可以为所欲为。<br/> <br/> <br/>3️⃣💯6️⃣🔟行，行行出BUG。"
+        subtitle: "🧨人生三大真理：<br/>暴力真的可以解决一切，<br/>帅真的可以当饭吃，<br/>有钱真的可以为所欲为。<br/> <br/> <br/>3️⃣💯6️⃣🔟行，行行出BUG。 <br/>联系我 👇🏻"
         imageUrl: "img/Q.gif"
         imageTitle: 
         imageWidth: 150
@@ -74,6 +74,10 @@ languages:
             name: ⏱ 时间轴
             url: archives/
             weight: 20
+          - identifier: music
+            name: 🎵 听听歌
+            url: music
+            weight: 30
           - identifier: about
             name: 🙋🏻‍♂️ 关于
             url: about
@@ -81,7 +85,7 @@ languages:
           - identifier: links
             name: 🤝 友链
             url: links
-            weight: 60
+            weight: 60         
 
 outputs:
     home:
