--- a/content/.obsidian/workspace
+++ b/content/.obsidian/workspace
@@ -1,19 +1,15 @@
 {
   "main": {
-    "id": "dadac4315237c52e",
+    "id": "50a69c3d0ac4214b",
     "type": "split",
     "children": [
       {
-        "id": "6c8ceb7092a38532",
+        "id": "e1e386ba16b5a933",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-<<<<<<< HEAD
-            "file": "posts/blog/blog-question.md",
-=======
-            "file": "posts/life/shopping.md",
->>>>>>> 9ce553ab01b4fcabd7e0c4dc355333f140d5ada0
+            "file": "posts/tools/Git.md",
             "mode": "source",
             "source": false
           }
@@ -23,15 +19,15 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "f2a28f24dc73f67f",
+    "id": "7846ba48cd4dfff4",
     "type": "split",
     "children": [
       {
-        "id": "f2f2ae59f7996cde",
+        "id": "f22b9408957bd992",
         "type": "tabs",
         "children": [
           {
-            "id": "f1bfae44b5301360",
+            "id": "5e3dba47001c59d4",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -39,12 +35,12 @@
             }
           },
           {
-            "id": "9955cc9ae56ef629",
+            "id": "0dd530d6d2d21bce",
             "type": "leaf",
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "必备应用",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -54,7 +50,7 @@
             }
           },
           {
-            "id": "755e275a4c0799a2",
+            "id": "5c69be1f6ca5c378",
             "type": "leaf",
             "state": {
               "type": "starred",
@@ -68,24 +64,20 @@
     "width": 300
   },
   "right": {
-    "id": "0d73b09ac334b38e",
+    "id": "6433be54c59c7839",
     "type": "split",
     "children": [
       {
-        "id": "a5d8fa5d73a3f4f1",
+        "id": "66b9dcec627cec2d",
         "type": "tabs",
         "children": [
           {
-            "id": "795d4f62230140bf",
+            "id": "dcb1667333df3526",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-<<<<<<< HEAD
-                "file": "posts/blog/blog-question.md",
-=======
-                "file": "posts/life/shopping.md",
->>>>>>> 9ce553ab01b4fcabd7e0c4dc355333f140d5ada0
+                "file": "posts/tools/Git.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,23 +89,19 @@
             }
           },
           {
-            "id": "8ae6d4d4117e4f0e",
+            "id": "457a4e89b7d0a8f8",
             "type": "leaf",
             "state": {
               "type": "outgoing-link",
               "state": {
-<<<<<<< HEAD
-                "file": "posts/blog/blog-question.md",
-=======
-                "file": "posts/life/shopping.md",
->>>>>>> 9ce553ab01b4fcabd7e0c4dc355333f140d5ada0
+                "file": "posts/tools/Git.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
             }
           },
           {
-            "id": "718d32a578750994",
+            "id": "6b277ee0042bddc7",
             "type": "leaf",
             "state": {
               "type": "tag",
@@ -124,58 +112,33 @@
             }
           },
           {
-            "id": "75a3b6bf68ecd988",
+            "id": "5c35073c7a84cba8",
             "type": "leaf",
             "state": {
               "type": "outline",
               "state": {
-<<<<<<< HEAD
-                "file": "posts/blog/blog-question.md"
-=======
-                "file": "posts/life/shopping.md"
->>>>>>> 9ce553ab01b4fcabd7e0c4dc355333f140d5ada0
+                "file": "posts/tools/Git.md"
               }
             }
-          },
-          {
-            "id": "e5a6a1669ab1fefb",
-            "type": "leaf",
-            "state": {
-              "type": "git-view",
-              "state": {}
-            }
           }
-        ],
-        "currentTab": 4
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
-  "active": "6c8ceb7092a38532",
+  "active": "e1e386ba16b5a933",
   "lastOpenFiles": [
-<<<<<<< HEAD
-    "posts/blog/markdown-syntax.md",
-    "posts/work/_index 1.md",
-    "posts/work/obsidian 1.md",
-    "posts/tools/GitHub.md",
-    "posts/tools/Git.md",
-    "posts/tools/Linux.md",
-    "posts/tools/obsidian.md",
-    "posts/tools/_index.md",
-    "posts/_index.md",
-    "posts/life/shopping.md"
-=======
-    "posts/life/Medical.md",
-    "posts/life/life-2022.md",
-    "posts/read/read.md",
-    "posts/tech/Java/微信支付.md",
-    "posts/blog/markdown-use.md",
-    "posts/blog/blog-question.md",
-    "posts/blog/blog-music.md",
     "posts/blog/blog-github.md",
-    "posts/blog/blog-first.md",
-    "posts/tech/Java/微信小程序相关.md"
->>>>>>> 9ce553ab01b4fcabd7e0c4dc355333f140d5ada0
+    "posts/tools/Chrome.md",
+    "posts/tools/applist.md",
+    "archives.md",
+    "links.md",
+    "about.md",
+    "posts/_index.md",
+    "posts/life/Medical.md",
+    "posts/tools/_index.md",
+    "posts/life/_index.md"
   ]
 }
